testdata/baselines/reference/submodule/conformance/extendsTag5.errors.txt
/a.js(13,15): error TS2304: Cannot find name 'T'.


==== /a.js (1 errors) ====
    /**
     * @typedef {{
    *     a: number | string;
    *     b: boolean | string[];
    * }} Foo
    */
    
    /**
    * @template {Foo} T
    */
    class A {
       /**
        * @param {T} a
                  ~
!!! error TS2304: Cannot find name 'T'.
        */
       constructor(a) {
           return a
       }
    }
    
    /**
    * @extends {A<{
    *     a: string,
    *     b: string[]
    * }>}
    */
    class B extends A {}
    
    /**
     * @extends {A<{
     *     a: string,
     *     b: string
     * }>}
     */
    class C extends A {}
    
    /**
     * @extends {A<{a: string, b: string[]}>}
     */
    class D extends A {}
    
    /**
     * @extends {A<{a: string, b: string}>}
     */
    class E extends A {}
    